source/objects/ContactBluescapeOrg__c/ContactBluescapeOrg__c.object-meta.xml
<CustomObject>
    <description>The many to many association between Portal Users (Contacts flaged as Portal Users) and Bluescape Org&#39;s</description>
    <label>ContactBluescapeOrg</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ContactBluescapeOrg Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactBluescapeOrgs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>