source/objects/ContactBluescapeOrg__c/fields/Bluescape_Org__c.field-meta.xml
<CustomField>
    <fullName>Bluescape_Org__c</fullName>
    <label>Bluescape Org</label>
    <referenceTo>Bluescape_Org__c</referenceTo>
    <relationshipLabel>Portal Users</relationshipLabel>
    <relationshipName>ContactBluescapeOrgs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>