source/objects/ContactBluescapeOrg__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>The type of User access in the Bluescape Org</description>
    <inlineHelpText>The type of User access in the Bluescape Org</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>